<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Sign_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="142dp"
        android:layout_below="@+id/Sign_tool"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="10dp"
        android:hint="@string/no_wa"
        android:inputType="phone"
        android:text="62"
        android:padding="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="konfirmasi password"
        android:inputType="textPassword"
        android:padding="20dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_below="@id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/daftar"
        android:textColor="@color/textColor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="sudah punya akun?"
        android:gravity="center"
        android:layout_below="@id/signupButton"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/link"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/signupProgresbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>