<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/text_Dashboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="Suspicious0dp" />

    <!--        navbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dash_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Akun Saya"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_dash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dash_toolbar"
        android:orientation="vertical">

        <Button
            android:id="@+id/toko_saya"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/textColor"
            android:drawableLeft="@drawable/person_outline"
            android:drawableRight="@drawable/half_arrow"
            android:text="@string/toko_saya" />

        <Button
            android:id="@+id/pusat_bantuan"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint="@color/textColor"
            android:drawableLeft="@drawable/help_outline"
            android:drawableRight="@drawable/half_arrow"
            android:text="@string/pusat_bantuan" />

        <Button
            android:id="@+id/tentang_kami"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint="@color/textColor"
            android:drawableLeft="@drawable/about"
            android:text="@string/tentang_aplikasi"
            android:drawableRight="@drawable/half_arrow"
            />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout_dash"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/logout"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

</RelativeLayout>