<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Sell_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/Jual_Barang"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sell_tool" />

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Judul Postingan"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
        />

    <EditText
        android:id="@+id/etJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="masukkan judul postingan"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvJudul"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Harga Produk"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/etJudul"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHarga"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/masukkan_harga_produk_rp"
        android:text="@string/rp"
        android:inputType="number"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Deskripsi Produk"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/etHarga"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="masukkan deskripsi produk"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvDeskripsi"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnPosting"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/etDeskripsi"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="Posting"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/bottom_bar"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>